--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
         <div class="carousel-item active">
           <img
             class="d-block w-100"
-            src="/Kude/img/Group 62.png"
+            src="img/Group 62.png"
             alt="First slide"
           />
         </div>
         <div class="carousel-item">
           <img
             class="d-block w-100"
-            src="/Kude/img/Group 66.png"
+            src="img/Group 66.png"
             alt="Second slide"
           />
         </div>
         <div class="carousel-item">
           <img
             class="d-block w-100"
-            src="/Kude/img/Group 67.png"
+            src="img/Group 67.png"
             alt="Third slide"
           />
         </div>
@@ -85,7 +85,7 @@
             <div class="card" style="width: 20rem">
               <img
                 class="card-img-top"
-                src="/Kude/img/Group 61.png"
+                src="img/Group 61.png"
                 alt="Card image cap"
               />
               <div class="card-body size">
@@ -101,7 +101,7 @@
             <div class="card" style="width: 20rem">
               <img
                 class="card-img-top"
-                src="/Kude/img/Group 61.png"
+                src="img/Group 61.png"
                 alt="Card image cap"
               />
               <div class="card-body size">
@@ -117,7 +117,7 @@
             <div class="card" style="width: 20rem">
               <img
                 class="card-img-top"
-                src="/Kude/img/Group 61.png"
+                src="img/Group 61.png"
                 alt="Card image cap"
               />
               <div class="card-body size">
@@ -150,7 +150,7 @@
         <a href="#" class="btn btn-primary">Weiterlesen</a>
       </div>
       <div class="col-sm margin10">
-        <img src="/Kude/img/auto.png" class="w-75">
+        <img src="img/auto.png" class="w-75">
       </div>
   </div>
   </div>
